# rapidyaml

./: .clang-tidy  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresets.ys  CONTRIBUTING.md  README.md  ROADMAP.md  appveyor.yml  pyproject.toml  rapidyamlConfig.cmake.in  requirements.txt  ryml.natvis  setup.py  tbump.toml
.ci/: Vagrantfile  travis-coverage.sh  travis-install.sh  travis-setenv.sh  travis-test.sh
.github/: cancel_workflows.sh  codeql.yml  mingw-w64-x86_64.cmake  release.sh  reqs.sh  setenv.sh
.github/toolchains/: linux-gnu-powerpc64le.cmake
.github/workflows/: .benchmarks.yml  .clang_tidy.yml  .coverage.yml  .gcc.yml  (+44 more)
.github/workflows-in/: Makefile  api.ys  benchmarks.ys  clang.ys  clang_tidy.ys  coverage.ys  embedded.ys  emscripten.ys  gcc.ys  infra.ys  install.ys  macosx.ys  rarearchs.ys  release.ys  samples.ys  windows.ys
.github/workflows-src/: Makefile  README.md  benchmarks.yml  clang.yml  clang_tidy.yml  codeql.yml  coverage.yml  emscripten.yml  gcc.yml  install.yml  macosx.yml  rarearchs.yml  release.yml  samples.yml  windows.yml
api/: CMakeLists.txt  ryml.i
api/python/: .gitignore  Makefile  parse.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
api/python/bm/: bm_parse.py
api/python/ryml/: __init__.py
api/python/ryml/tests/: parse.py  parse_bm.py  test_parse.py  test_transform.py
api/python/tests/: test_basic.py  test_parse.py  test_readme.py  test_ryml.py
bm/: CMakeLists.txt  bm_common.hpp  bm_emit.cpp  bm_parse.cpp  bm_plot_rapidyaml.py  libyaml.hpp  parse.cpp  rapidjson.fix.diff
bm/cases/: bm-cases.txt  compile_commands.json  style_maps_blck_outer1000_inner10.yml  style_maps_blck_outer1000_inner100.yml  style_maps_flow_outer1000_inner10.yml  style_maps_flow_outer1000_inner100.yml  style_maps_flow_outer1000_inner100_json.yml  style_maps_flow_outer1000_inner10_json.yml  style_seqs_blck_outer1000_inner10.yml  style_seqs_blck_outer1000_inner100.yml  style_seqs_flow_outer1000_inner10.yml  style_seqs_flow_outer1000_inner100.yml  style_seqs_flow_outer1000_inner1000.yml  style_seqs_flow_outer1000_inner1000_json.json  style_seqs_flow_outer1000_inner100_json.json  style_seqs_flow_outer1000_inner10_json.json
bm/results/: results_after_newparser.md  results_before_newparser.md
changelog/: 0.1.0.md  0.11.0.md  0.11.1.md  0.12.0.md  0.13.0.md  0.14.0.md  0.15.0.md  0.15.1.md  0.15.2.md  0.2.0.md  0.2.1.md  0.4.1.md  0.5.0.md  0.6.0.md  0.7.0.md  0.7.2.md  0.8.0.md  0.9.0.md  current.md
doc/: .gitignore  Doxyfile  DoxygenLayout.xml  Makefile  conf.py  doxy_changelog.md  doxy_common.hpp  doxy_main.md  doxy_serialization_implementation.hpp  doxy_serialization_user_types.hpp  doxy_serialization_using.hpp  doxyrest-config.lua  index.rst  requirements.txt  sphinx_alternative_libraries.rst  sphinx_api_documentation.rst  sphinx_cmake_build_settings.rst  sphinx_is_it_rapid.rst  sphinx_other_languages.rst  sphinx_quicklinks.rst  sphinx_try_quickstart.rst  sphinx_using.rst  sphinx_yaml_standard.rst
ext/: Makefile  README.md  c4core.cmake  c4core.dev.txt  c4core.mk  c4core.proj.txt  c4core.sh  c4core.src.txt  c4core.yml  sync.py  testbm.cmake
proj/: Makefile  common.mk  uninstall.cmake  ys.mk
samples/: CMakeLists.txt  quick_tour.cpp  quickstart-ints.cpp  quickstart.cpp
samples/add_subdirectory/: CMakeLists.txt  main.cpp
samples/custom_c4core/: CMakeLists.txt  run.sh
samples/fetch_content/: CMakeLists.txt  main.cpp  run.sh
samples/find_package/: CMakeLists.txt  run.sh
samples/ints_only/: CMakeLists.txt  run.sh
samples/singleheader/: CMakeLists.txt  amalgamate.cmake  run.sh
samples/singleheader-ints/: CMakeLists.txt  amalgamate.cmake  run.sh
samples/singleheaderlib/: CMakeLists.txt  lib.cpp  run.sh  run_shared.sh  run_static.sh
samples/singlesource/: CMakeLists.txt  amalgamate.cmake  run.sh
src/: ryml-gdbtypes.py  ryml.hpp  ryml.natvis  ryml_std.hpp
test/: CMakeLists.txt  basic.cpp  basic_json.cpp  block_folded.cpp  block_literal.cpp  callbacks_tester.hpp  complex_key.cpp  double_quoted.cpp  empty_doc.cpp  empty_file.cpp  empty_map.cpp  empty_seq.cpp  extern.cmake  extern.cmake.in  generic_map.cpp  generic_seq.cpp  github_issues.cpp  indentation.cpp  libyaml.hpp  map_of_seq.cpp  merge.cpp  nested_mapx2.cpp  nested_mapx3.cpp  nested_mapx4.cpp  nested_seqx2.cpp  nested_seqx3.cpp  nested_seqx4.cpp  null_val.cpp  number.cpp  parse_emit.cpp  plain_scalar.cpp  preprocess.cpp  ref.hpp  scalar_names.cpp  seq_of_map.cpp  simple_anchor.cpp  simple_doc.cpp  simple_map.cpp  simple_seq.cpp  simple_set.cpp  (+147 more)
test/c4/tpl/: common.hpp  engine.hpp  mgr.hpp  rope.hpp  token.cpp  token.hpp  token_container.cpp  token_container.hpp
test/c4/tpl/test/: test_engine.cpp  test_rope.cpp
test/test_fuzz/: test_fuzz_common.hpp  test_fuzz_events_ints.cpp  test_fuzz_events_testsuite.cpp  test_fuzz_json_ints.cpp  test_fuzz_json_tree.cpp  test_fuzz_main.cpp  test_fuzz_parse_emit.cpp  test_fuzz_srlz.cpp  test_fuzz_yaml_ints.cpp  test_fuzz_yaml_tree.cpp  test_libfuzzer_events.cpp  test_libfuzzer_parse_emit.cpp
test/test_install/: CMakeLists.txt
test/test_lib/: callbacks_tester.hpp  string.hpp  test_case.cpp  test_case.hpp  test_case_node.cpp  test_case_node.hpp  test_engine.cpp  test_engine.hpp  test_events_int.cpp  test_events_int.hpp  test_events_ints_helpers.cpp  test_events_ints_helpers.hpp  test_group.cpp  test_group.def.hpp  test_group.hpp  test_main.cpp  test_main.hpp  test_save.cpp
test/test_singleheader/: CMakeLists.txt  libryml_singleheader.cpp
test/test_singlesource/: CMakeLists.txt
test/test_suite/: string.hpp  test_suite_common.hpp  test_suite_event_handler.cpp  test_suite_event_handler.hpp  test_suite_events.cpp  test_suite_events.hpp  test_suite_events_emitter.cpp  test_suite_parts.cpp  test_suite_parts.hpp
test/testsuite/: testsuite_common.hpp  testsuite_events.cpp  testsuite_events.hpp  testsuite_events_emitter.cpp  testsuite_parts.cpp  testsuite_parts.hpp
tools/: CMakeLists.txt  Makefile  amalgamate.py  parse_emit.cpp  yaml_events.cpp
(+223 files in other folders)
